2013-10-04  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTimeZone.m: Fix bug with byte swapping ... use NSByteOrder.h

2013-10-01  Richard Frith-Macdonald <rfm@gnu.org>

        * config/config.align.c: Try to more reliably detect whether word
        alignment is needed.
        * Source/NSUserDefaults.m: Fix failure to send notification when
        defaults are updated.

2013-09-18  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSTLS.h:
        * Source/GSTLS.m:
        * Source/NSFileHandle.m:
        * Headers/Foundation/NSFileHandle.h:
        Add mechanism to set the contents of TLS certificate and key files
        in memory rather than reading from disk.  Expose TLS property keys
        in the NSFileHandle header to allow more control over certificates.

2013-09-10  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Check for another unicode header
        * Headers/GNUstepBase/config.h.in: regenerate
        * configure: regenerate
        * Source/Additions/Unicode.m: If ICU is available, use it to obtain
        default C-string encoding.

2013-09-09  Pirmin Braun <pb@intars.de>

        * Source/Additions/GSMime.m: When creating a child parser, pass on
        the flag to say we are parsing HTTP rather than MIME.
        
2013-09-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Additions/GSMime.m: Add comments and a further fallback
        mechanism for parsing HTTP when the default encoding is set.
        * Source/NSUnarchiver.m: Fix integer size values to use constants
        from stdint.h

2013-09-06  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSUserDefaults.m: Update cache when we syunchronise a new
        domain to disk (was only updating on changes to existing domains).
        Should fix bug #39300

2013-08-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/GNUstepBase/GSVersionMacros.h: Fix usage of __APPLE__ macro.
	Patch by Graham Lee <iamleeg@gmail.com>
